# cmake-test

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
common/: CMakeLists.txt
common/include/: base.h
module-a/: CMakeLists.txt
module-a/include/: a.h
module-a/src/: a.cpp
